force-app/main/default/objects/Lead/fields/Last_Touched_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Touched_Date__c</fullName>
    <label>Last Touched Date</label>
    <type>Date</type>
</CustomField>