force-app/main/default/objects/Lead/fields/Memberships__c.field-meta.xml
<CustomField>
    <fullName>Memberships__c</fullName>
    <label>Memberships</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>