force-app/main/default/objects/Lead/validationRules/FirstNameIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameIsNotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FirstName)</errorConditionFormula>
    <errorMessage>You must enter the Lead first name.</errorMessage>
</ValidationRule>