force-app/main/default/objects/Lead/listViews/Kissimmee_FL_Lead.listView-meta.xml
<ListView>
    <fullName>Kissimmee_FL_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Kissimmee FL</label>
    <queue>Kissimmee_FL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>