force-app/main/default/objects/Lead/listViews/Lake_Mary_FL_Lead.listView-meta.xml
<ListView>
    <fullName>Lake_Mary_FL_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lake Mary FL</label>
    <queue>Lake_Mary_FL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>