force-app/main/default/objects/Lead/listViews/Nashua_NH_Lead.listView-meta.xml
<ListView>
    <fullName>Nashua_NH_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Nashua NH</label>
    <queue>Nashua_NH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>