force-app/main/default/objects/Lead/listViews/Ocoee_FL_Lead.listView-meta.xml
<ListView>
    <fullName>Ocoee_FL_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Ocoee FL</label>
    <queue>Ocoee_FL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>