force-app/main/default/objects/Lead/listViews/Oviedo_FL_Lead.listView-meta.xml
<ListView>
    <fullName>Oviedo_FL_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Oviedo FL</label>
    <queue>Oviedo_FL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>