force-app/main/default/objects/Lead/listViews/Winter_PArk_FL_Lead.listView-meta.xml
<ListView>
    <fullName>Winter_PArk_FL_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Winter Park FL</label>
    <queue>Winter_PArk_FL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>